--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -23,6 +23,9 @@
         <%= f.submit 'Create Book' %>
     <% end %>
 
-<h2>Book detail</h2>
-    <%= @post_book.title %>
-    <%= @post_book.body %>
+<h2>Users</h2>
+    <%# <%= attachment_image_tag @user, :profile_image, :fill, 60, 60, fallback: "no_image.jpg" %>
+    <% @users.each do |user| %>
+        <%= user.name %>
+        <%=link_to "Show",user_path(user.id) %> 
+     <% end %>
