--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -1,1 +1,9 @@
-<h1>welcome to Bookers !!</h1>
+<div class="top-message">
+    <h1>welcome to Bookers !!</h1>
+    <p>In <strong>Bookers,</strong></p>
+    <p>you can share and exchange your opinions , inpressions , and emotions<br>
+    about various books!</p>
+
+    <a class="btn btn_sign_in" href="/users/sign_in">Log in</a>
+    <a class="btn btn_sign_up" href="/users/sign_up">Sign up</a> 
+</div>
