--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,45 @@
   </head>
 
   <body>
+  <div class="header container">
+    <nav class="nav navbar-nav navbar-left">
+      <span>Bookers</span>
+    </nav>
+    <nav>
+      <ul class="nav navbar-nav navbar-right">
+        <% if user_signed_in? %>
+          <li class="">
+            <%= link_to "Home", user_path( @user = current_user.id) %>
+          </li>
+          <li class="">
+            <%= link_to 'Users', users_path %>
+          </li>
+          <li class="">
+            <%= link_to 'Books', books_path %>
+          </li>
+          <li class="">
+            <%= link_to "logout", destroy_user_session_path, method: :delete %>
+          </li>
+        <% else %>
+          <li class="">
+            <%= link_to "Home", root_path %>
+          </li>
+          <li class="">
+            <%= link_to "About", homes_about_path %>
+          </li>
+          <li class="">
+            <%= link_to "sign up", new_user_registration_path %>
+          </li>
+          <li class="">
+            <%= link_to "login", new_user_session_path %>
+          </li>
+        <% end %>
+      </ul>
+    </nav>
+  </div>
     <%= yield %>
+  <footer>
+    <p class="copyright">CopyRight Infratop.inc</p>
+  </footer>
   </body>
 </html>
