--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,3 +1,6 @@
+<div class="container">
+<div class="row">
+<div class= "col-lg-4">
 <% 
 =begin
 %>
@@ -22,10 +25,24 @@
 
         <%= f.submit 'Create Book' %>
     <% end %>
+</div>
 
+<div class= "col-lg-8">
 <h2>Books</h2>
-    <%# <%= attachment_image_tag @user, :profile_image, :fill, 60, 60, fallback: "no_image.jpg" %>
+    <table>
+    <tr>
+        <td></td>
+        <td>Title</td>
+        <td>Opinion</td>
+    </tr>
     <% @books.each do |book| %>
-        <%=link_to "#{book.title}",book_path(book.id) %>
-        <%= book.body %>
-     <% end %>
+    <tr>
+        <td></td>
+        <td><%=link_to "#{book.title}",book_path(book.id) %></td>
+        <td><%= book.body %></td>
+    </tr>
+    <% end %>
+    </table>
+</div>
+</div>
+</div>
