--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
   </head>
 
   <body>
-  <div class="header container">
+  <div class="container">
     <nav class="nav navbar-nav navbar-left">
       <span>Bookers</span>
     </nav>
@@ -46,9 +46,14 @@
       </ul>
     </nav>
   </div>
+  </div>
     <%= yield %>
+  <div class="container">
+  <div class="row">
   <footer>
-    <p class="copyright">CopyRight Infratop.inc</p>
+    <p class="text-right">CopyRight Infratop.inc</p>
   </footer>
+  </div>
+  </div>
   </body>
 </html>
