--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -1,3 +1,5 @@
+<div class="container">
+<div class="row">
 <div class="top-message">
     <h1>welcome to Bookers !!</h1>
     <p>In <strong>Bookers,</strong></p>
@@ -6,4 +8,6 @@
 
     <a class="btn btn_sign_in" href="/users/sign_in">Log in</a>
     <a class="btn btn_sign_up" href="/users/sign_up">Sign up</a> 
+</div>
+</div>
 </div>
