--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,3 +1,5 @@
+<div class="container">
+<div class="row">
 <h2>User info</h2>
 <%= form_for(@user) do |f| %>
     <h4>Name</h4>
@@ -13,3 +15,5 @@
     <%= f.submit 'Update User' %>
  
 <% end %>
+</div>
+</div>
