--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -1,8 +1,8 @@
 <div class="container">
 <div class="row">
 <div class="top-message">
-    <h1>welcome to Bookers !!</h1>
-    <p>In <strong>Bookers,</strong></p>
+    <h1>welcome to <span class="glyphicon glyphicon-book" aria-hidden="true"></span>Bookers!!</h1>
+    <p>In <span class="glyphicon glyphicon-book" aria-hidden="true"></span>Bookers,</p>
     <p>you can share and exchange your opinions , inpressions , and emotions<br>
     about various books!</p>
 
