--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,43 +10,52 @@
   </head>
 
   <body>
-  <div class="container">
-    <nav class="nav navbar-nav navbar-left">
-      <span>Bookers</span>
-    </nav>
-    <nav>
-      <ul class="nav navbar-nav navbar-right">
-        <% if user_signed_in? %>
-          <li class="">
-            <%= link_to "Home", user_path( @user = current_user.id) %>
-          </li>
-          <li class="">
-            <%= link_to 'Users', users_path %>
-          </li>
-          <li class="">
-            <%= link_to 'Books', books_path %>
-          </li>
-          <li class="">
-            <%= link_to "logout", destroy_user_session_path, method: :delete %>
-          </li>
-        <% else %>
-          <li class="">
-            <%= link_to "Home", root_path %>
-          </li>
-          <li class="">
-            <%= link_to "About", homes_about_path %>
-          </li>
-          <li class="">
-            <%= link_to "sign up", new_user_registration_path %>
-          </li>
-          <li class="">
-            <%= link_to "login", new_user_session_path %>
-          </li>
-        <% end %>
-      </ul>
-    </nav>
+    <nav class="navber navbar-inverse">
+    <div class="container">
+    <div class="navbar-header">
+      <span class="text-white">Bookers</span>
+    </div>
+
+    <ul class="nav navbar-nav navbar-right">
+      <% if user_signed_in? %>
+        <li class="">
+          <span class="glyphicon glyphicon-home" aria-hidden="true"></span>
+          <%= link_to "Home", user_path( @user = current_user.id) %>
+        </li>
+        <li class="">
+          <span class="glyphicon glyphicon-user" aria-hidden="true"></span>
+          <%= link_to 'Users', users_path %>
+        </li>
+        <li class="">
+          <span class="glyphicon glyphicon-book" aria-hidden="true"></span>
+          <%= link_to 'Books', books_path %>
+        </li>
+        <li class="">
+          <span class="glyphicon glyphicon-log-out" aria-hidden="true"></span>
+          <%= link_to "logout", destroy_user_session_path, method: :delete %>
+        </li>
+      <% else %>
+        <li class="">
+          <span class="glyphicon glyphicon-home" aria-hidden="true"></span>
+          <%= link_to "Home", root_path %>
+        </li>
+        <li class="">
+          <span class="glyphicon glyphicon-link" aria-hidden="true"></span>
+          <%= link_to "About", homes_about_path %>
+        </li>
+        <li class="">
+          <span class="glyphicon glyphicon-edit" aria-hidden="true"></span>
+          <%= link_to "sign up", new_user_registration_path %>
+        </li>
+        <li class="">
+          <span class="glyphicon glyphicon-log-in" aria-hidden="true"></span>
+          <%= link_to "login", new_user_session_path %>
+        </li>
+      <% end %>
+    </ul>
+  
   </div>
-  </div>
+  </nav>
     <%= yield %>
   <div class="container">
   <div class="row">
