--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -34,8 +34,8 @@
         <td></td>
         <td><%= link_to "#{@post_book.title}", book_path(@post_book.id)  %></td>
         <td><%= @post_book.body %></td>
-        <td><%= link_to "Edit", edit_book_path(@post_book.id) %></td>
-        <td>Destroy</td>
+        <td><%= link_to 'Edit', edit_book_path(@post_book.id) %></td>
+        <td><%= link_to 'Destroy', book_path(@post_book.id), method: :delete, "data-confirm" => "本当に削除しますか？" %></td>
     </tr>
     </table>
 </div>
