--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,19 +1,18 @@
 <div class="container">
 <div class="row">
 <div class= "col-lg-4">
-<% 
-=begin
-%>
 <h2>User info</h2>
-    <%= attachment_image_tag @user, :profile_image, :fill, 60, 60, fallback: "no_image.jpg" %>
-    <h4>name<h4>
-    <%= @user.name %>
-
-    <h4>introduction</h4>
-    <%= @user.introduction %>
-<%
-=end
-%>
+    <%= attachment_image_tag @user, :profile_image, :fill, 100, 100, fallback: "no_image.jpg", size:'100x100' %>
+    <table>
+    <tr>
+        <td>name</td>
+        <td><%= @user.name %></td>
+    </tr>
+    <tr>
+        <td>introduction</td>
+        <td><%= @user.introduction %></td>
+    </tr>
+    </table>
 
 <h2>New book</h2>
     <%= form_for(@book, url:books_path) do |f| %>
@@ -31,13 +30,14 @@
 <h2>Books</h2>
     <table>
     <tr>
+            <td></td>
         <td></td>
         <td>Title</td>
         <td>Opinion</td>
     </tr>
     <% @books.each do |book| %>
     <tr>
-        <td></td>
+        <td><%= attachment_image_tag book, :profile_image, :fill, 50, 50, fallback: "no_image.jpg", size:'50x50' %></td>
         <td><%=link_to "#{book.title}",book_path(book.id) %></td>
         <td><%= book.body %></td>
     </tr>
