--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -42,7 +42,7 @@
         <% if book.user_id == @user.id %>
         <tr>
             <td><%= attachment_image_tag @user, :profile_image, :fill, 50, 50, fallback: "no_image.jpg", size:'50x50' %></td>
-            <td><%= book.title %></td>
+            <td><%= link_to "#{book.title}", book_path(book.id) %></td>
             <td><%= book.body%></td>
         </tr>
         <% end %>
