--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -30,14 +30,13 @@
 <h2>Books</h2>
     <table>
     <tr>
-            <td></td>
         <td></td>
         <td>Title</td>
         <td>Opinion</td>
     </tr>
     <% @books.each do |book| %>
     <tr>
-        <td><%= attachment_image_tag book, :profile_image, :fill, 50, 50, fallback: "no_image.jpg", size:'50x50' %></td>
+        <td><%= attachment_image_tag book.user, :profile_image, :fill, 50, 50, fallback: "no_image.jpg", size:'50x50' %></td>
         <td><%=link_to "#{book.title}",book_path(book.id) %></td>
         <td><%= book.body %></td>
     </tr>
