[add]devise-setting

--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -1,6 +1,10 @@
 <div class="container">
 <div class="row">
 <div class="top-message">
+<% if flash[:notice] %>
+  <p><%= flash[:notice] %></p>
+<% end %>
+
     <h1>welcome to <span class="glyphicon glyphicon-book" aria-hidden="true"></span>Bookers!!</h1>
     <p>In <span class="glyphicon glyphicon-book" aria-hidden="true"></span>Bookers,</p>
     <p>you can share and exchange your opinions , inpressions , and emotions<br>
