--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -2,6 +2,18 @@
 <div class="row">
 <h2>Editing Book</h2>
 <%= form_for(@book) do |f| %>
+
+    <% if @book.errors.any? %>
+    <div id="error_explanation">
+        <h2><%= @book.errors.count %>errors prohibited this obj from being saved:</h2>
+        <ul>
+        <% @book.errors.full_messages.each do |message| %>
+            <li><%= message %></li>
+        <% end %>
+        </ul>
+    </div>
+    <% end %>
+
     <h4>Title</h4>
     <%= f.text_field :title %>
 
