--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -21,6 +21,18 @@
 
 <h2>New book</h2>
     <%= form_for(@book, url:books_path) do |f| %>
+
+    <% if @book.errors.any? %>
+    <div id="error_explanation">
+        <h2><%= @book.errors.count %>errors prohibited this obj from being saved:</h2>
+        <ul>
+        <% @book.errors.full_messages.each do |message| %>
+            <li><%= message %></li>
+        <% end %>
+        </ul>
+    </div>
+    <% end %>
+    
         <h4>Title</h4>
         <%= f.text_field :title %>
 
