--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -41,7 +41,7 @@
         </li>
         <li class="">
           <span class="glyphicon glyphicon-link" aria-hidden="true"></span>
-          <%= link_to "About", homes_about_path %>
+          <%= link_to "About", home_about_path %>
         </li>
         <li class="">
           <span class="glyphicon glyphicon-edit" aria-hidden="true"></span>
