--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -2,6 +2,18 @@
 <div class="row">
 <h2>User info</h2>
 <%= form_for(@user) do |f| %>
+
+    <% if @user.errors.any? %>
+    <div id="error_explanation">
+        <h2><%= @user.errors.count %>errors prohibited this obj from being saved:</h2>
+        <ul>
+        <% @user.errors.full_messages.each do |message| %>
+            <li><%= message %></li>
+        <% end %>
+        </ul>
+    </div>
+    <% end %>
+
     <h4>Name</h4>
     <%= f.text_field :name %>
 
