--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -36,7 +36,11 @@
     </tr>
     <% @books.each do |book| %>
     <tr>
-        <td><%= attachment_image_tag book.user, :profile_image, :fill, 50, 50, fallback: "no_image.jpg", size:'50x50' %></td>
+        <td>
+            <%= link_to user_path(book.user_id) do %>
+                <%= attachment_image_tag book.user, :profile_image, :fill, 50, 50, fallback: "no_image.jpg", size:'50x50' %>
+            <% end %>
+        </td>
         <td><%=link_to "#{book.title}",book_path(book.id) %></td>
         <td><%= book.body %></td>
     </tr>
