--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -7,32 +7,28 @@
 <% end %>
 
 <h2>User info</h2>
-    <%= attachment_image_tag @user, :profile_image, :fill, 100, 100, fallback: "no_image.jpg", size:'100x100' %>
+    <%= attachment_image_tag current_user, :profile_image, :fill, 100, 100, fallback: "no_image.jpg", size:'100x100' %>
     <table>
     <tr>
         <td>name</td>
-        <td><%= @user.name %></td>
+        <td><%= current_user.name %></td>
     </tr>
     <tr>
         <td>introduction</td>
-        <td><%= @user.introduction %></td>
+        <td><%= current_user.introduction %></td>
     </tr>
     </table>
 
 <h2>New book</h2>
-    <%= form_for(@book, url:books_path) do |f| %>
-
+    <%= form_for(@book) do |f| %> 
     <% if @book.errors.any? %>
-    <div id="error_explanation">
         <h2><%= @book.errors.count %>errors prohibited this obj from being saved:</h2>
         <ul>
         <% @book.errors.full_messages.each do |message| %>
             <li><%= message %></li>
         <% end %>
         </ul>
-    </div>
     <% end %>
-    
         <h4>Title</h4>
         <%= f.text_field :title %>
 
