--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,37 +19,29 @@
     <ul class="nav navbar-nav navbar-right">
       <% if user_signed_in? %>
         <li class="">
-          <span class="glyphicon glyphicon-home" aria-hidden="true"></span>
-          <%= link_to "Home", user_path( @user = current_user.id) %>
+          <%= link_to "Home", user_path( @user = current_user.id), class:"glyphicon glyphicon-home" %>
         </li>
         <li class="">
-          <span class="glyphicon glyphicon-user" aria-hidden="true"></span>
-          <%= link_to 'Users', users_path %>
+          <%= link_to 'Users', users_path, class:"glyphicon glyphicon-user" %>
         </li>
         <li class="">
-          <span class="glyphicon glyphicon-book" aria-hidden="true"></span>
-          <%= link_to 'Books', books_path %>
+          <%= link_to 'Books', books_path, class:"glyphicon glyphicon-book" %>
         </li>
         <li class="">
-          <span class="glyphicon glyphicon-log-out" aria-hidden="true"></span>
-          <%= link_to "logout", destroy_user_session_path, method: :delete %>
+          <%= link_to "logout", destroy_user_session_path, class:"glyphicon glyphicon-log-out", method: :delete %>
         </li>
       <% else %>
         <li class="">
-          <span class="glyphicon glyphicon-home" aria-hidden="true"></span>
-          <%= link_to "Home", root_path %>
+          <%= link_to "Home", root_path, class:"glyphicon glyphicon-home" %>
         </li>
         <li class="">
-          <span class="glyphicon glyphicon-link" aria-hidden="true"></span>
-          <%= link_to "About", home_about_path %>
+          <%= link_to "About", home_about_path, class:"glyphicon glyphicon-link" %>
         </li>
         <li class="">
-          <span class="glyphicon glyphicon-edit" aria-hidden="true"></span>
-          <%= link_to "sign up", new_user_registration_path %>
+          <%= link_to "sign up", new_user_registration_path, class:"glyphicon glyphicon-edit" %>
         </li>
         <li class="">
-          <span class="glyphicon glyphicon-log-in" aria-hidden="true"></span>
-          <%= link_to "login", new_user_session_path %>
+          <%= link_to "login", new_user_session_path, class:"glyphicon glyphicon-log-in" %>
         </li>
       <% end %>
     </ul>
