--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,9 +1,10 @@
 <div class="container">
 <div class="row">
-<div class= "col-lg-4">
+
+<div class="col-xs-3">
 <h2>User info</h2>
     <%= attachment_image_tag current_user, :profile_image, :fill, 100, 100, fallback: "no_image.jpg", size:'100x100' %>
-    <table>
+    <table class="table">
     <tr>
         <td>name</td>
         <td><%= current_user.name %></td>
@@ -34,9 +35,9 @@
     <% end %>
 </div>
 
-<div class= "col-lg-8">
+<div class= "col-xs-9">
 <h2>Books</h2>
-    <table>
+    <table class="table">
     <tr>
         <td></td>
         <td>Title</td>
