--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,14 +1,14 @@
 <div class="container">
 <div class="row">
-<div class= "col-lg-4">
 
 <% if flash[:notice] %>
   <p><%= flash[:notice] %></p>
 <% end %>
 
+<div class="col-xs-3">
 <h2>User info</h2>
     <%= attachment_image_tag current_user, :profile_image, :fill, 100, 100, fallback: "no_image.jpg", size:'100x100' %>
-    <table>
+    <table class="table">
     <tr>
         <td>name</td>
         <td><%= current_user.name %></td>
@@ -39,9 +39,9 @@
     <% end %>
 </div>
 
-<div class= "col-lg-8">
+<div class= "col-xs-9">
 <h2>Book detail</h2>
-    <table>
+    <table class="table">
     <tr>
         <td>
             <%= attachment_image_tag @post_book.user, :profile_image, :fill, 50, 50, fallback: "no_image.jpg", size:'50x50' %>
