--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,6 +1,7 @@
 <div class="container">
 <div class="row">
 <h2>Editing Book</h2>
+<div class="col-xs-12">
 <%= form_for(@book) do |f| %>
 
     <% if @book.errors.any? %>
@@ -11,17 +12,20 @@
         <% end %>
         </ul>
     <% end %>
-
-    <h4>Title</h4>
-    <%= f.text_field :title %>
-
+    <div class="form-group">
+        <h4>Title</h4>
+        <%= f.text_field :title, class: 'form-control' %>
+    </div>
+    <div class="form-group">
     <h4>Opinion</h4>
-    <%= f.text_area :body %>
+    <%= f.text_area :body, class: 'form-control' %>
+    </div>
  
-    <%= f.submit 'Update Book' %>
+    <%= f.submit 'Update Book', class: 'btn btn-primary btn-block' %>
 <% end %>
 
 <%= link_to 'Show', book_path(@book) %>
 <%= link_to 'Back', books_path %>
+</div>
 </div>
 </div>
