--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -14,7 +14,7 @@
         <td><%= current_user.introduction %></td>
     </tr>
     </table>
-
+        <%= link_to "", edit_user_path(current_user.id), class: 'btn btn-default btn-block glyphicon glyphicon-wrench' %>
 <h2>New book</h2>
     <%= form_for(@book, url:books_path) do |f| %>
         <% if @book.errors.any? %>
@@ -25,13 +25,15 @@
         <% end %>
         </ul>
     <% end %>
+    <div class="form-group">
         <h4>Title</h4>
-        <%= f.text_field :title %>
-
+        <%= f.text_field :title,  class: 'form-control' %>
+    </div>
+    <div class="form-group">
         <h4>Opinion</h4>
-        <%= f.text_area :body %>
-
-        <%= f.submit 'Create Book' %>
+        <%= f.text_area :body,  class: 'form-control' %>
+    </div>
+        <%= f.submit 'Create Book', class: 'btn btn-primary btn-block' %>
     <% end %>
 </div>
 
