--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -18,6 +18,7 @@
         <td><%= current_user.introduction %></td>
     </tr>
     </table>
+        <%= link_to "", edit_user_path(current_user.id), class: 'btn btn-default btn-block glyphicon glyphicon-wrench' %>
 
 <h2>New book</h2>
     <%= form_for(@book) do |f| %> 
@@ -29,13 +30,16 @@
         <% end %>
         </ul>
     <% end %>
+    <div class="form-group">
         <h4>Title</h4>
-        <%= f.text_field :title %>
+        <%= f.text_field :title, class: 'form-control' %>
+    </div>
+    <div class="form-group">
+        <h4>Opinion</h4>   
+        <%= f.text_area :body, class: 'form-control' %>
+    </div>
 
-        <h4>Opinion</h4>
-        <%= f.text_area :body %>
-
-        <%= f.submit 'Create Book' %>
+        <%= f.submit 'Create Book', class: 'btn btn-primary btn-block' %>
     <% end %>
 </div>
 
@@ -50,8 +54,8 @@
         <td><%= link_to "#{@post_book.title}", book_path(@post_book.id)  %></td>
         <td><%= @post_book.body %></td>
         <% if @post_book.user_id == current_user.id %>
-        <td><%= link_to 'Edit', edit_book_path(@post_book.id) %></td>
-        <td><%= link_to 'Destroy', book_path(@post_book.id), method: :delete, "data-confirm" => "本当に削除しますか？" %></td>
+            <td><%= link_to 'Edit', edit_book_path(@post_book.id), class: 'btn btn-success' %></td>
+            <td><%= link_to 'Destroy', book_path(@post_book.id), class: 'btn btn-danger', method: :delete, "data-confirm" => "本当に削除しますか？" %></td>
         <% end %>
     </tr>
     </table>
