--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,17 +1,17 @@
 <div class="container">
 <div class="row">
-<div class="top-message">
 <% if flash[:notice] %>
   <p><%= flash[:notice] %></p>
 <% end %>
-
+<div class="col-md-offset-3 col-md-6">
     <h1>welcome to <span class="glyphicon glyphicon-book" aria-hidden="true"></span>Bookers!!</h1>
     <p>In <span class="glyphicon glyphicon-book" aria-hidden="true"></span>Bookers,</p>
     <p>you can share and exchange your opinions , inpressions , and emotions<br>
     about various books!</p>
-
-    <a class="btn btn_sign_in" href="/users/sign_in">Log in</a>
-    <a class="btn btn_sign_up" href="/users/sign_up">Sign up</a> 
+    <div class="col-xs-offset-1 col-xs-10">
+      <a class="btn btn_sign_in btn btn-info btn-block" href="/users/sign_in">Log in</a>
+      <a class="btn btn_sign_up btn btn-success btn-block" href="/users/sign_up">Sign up</a> 
+    </div>
 </div>
 </div>
 </div>
