--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -11,17 +11,20 @@
         <% end %>
         </ul>
     <% end %>
-
-    <h4>Name</h4>
-    <%= f.text_field :name %>
-
-    <h4>Image</h4>
-    <%= attachment_image_tag @user, :profile_image, :fill, 120, 120, fallback: "no_image.jpg", size:'120x120' %>
-    <%= f.attachment_field :profile_image, placeholder: "画像" %>
-
-    <h4>Introduction</h4>
-    <%= f.text_area :introduction %>
- 
+    <div class="form-group">
+        <h4>Name</h4>
+        <%= f.text_field :name %>
+    </div>
+    <div class="form-group">
+        <h4>Image</h4>
+        <%= attachment_image_tag @user, :profile_image, :fill, 120, 120, fallback: "no_image.jpg", size:'120x120' %>
+        <%= f.attachment_field :profile_image, placeholder: "画像" %>
+    </div>
+    <div class="form-group">
+        <h4>Introduction</h4>
+        <%= f.text_area :introduction %>
+    </div>
+    
     <%= f.submit 'Update User' %>
  
 <% end %>
