--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -14,6 +14,7 @@
         <td><%= current_user.introduction %></td>
     </tr>
     </table>
+        <%= link_to "", edit_user_path(current_user.id), class: 'btn btn-default btn-block glyphicon glyphicon-wrench' %>
 
 <h2>New book</h2>
     <%= form_for(@book, url:books_path) do |f| %>
@@ -25,13 +26,16 @@
         <% end %>
         </ul>
         <% end %>
-        <h4>Title</h4>
-        <%= f.text_field :title %>
+        <div class="form-group">
+            <h4>Title</h4>
+            <%= f.text_field :title, class: 'form-control' %>
+        </div>
+        <div class="form-group">
+            <h4>Opinion</h4>
+            <%= f.text_area :body, class: 'form-control' %>
+        </div>
 
-        <h4>Opinion</h4>
-        <%= f.text_area :body %>
-
-        <%= f.submit 'Create Book' %>
+        <%= f.submit 'Create Book', class: 'btn btn-primary btn-block' %>
     <% end %>
 </div>
 
