--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -19,7 +19,7 @@
     </tr>
     </table>
     <% if @user.id == current_user.id %>
-        <%= link_to "", edit_user_path, class: 'btn btn-default glyphicon glyphicon-wrench' %>
+        <%= link_to "", edit_user_path(@user.id), class: 'btn btn-default btn-block glyphicon glyphicon-wrench' %>
     <% end %>
 
 <h2>New book</h2>
@@ -32,13 +32,16 @@
             <% end %>
             </ul>
         <% end %>
-        <h4>Title</h4>
-        <%= f.text_field :title %>
+        <div class="form-group">
+            <h4>Title</h4>
+            <%= f.text_field :title, class: 'form-control' %>
+        </div>
+        <div class="form-group">
+            <h4>Opinion</h4>
+            <%= f.text_area :body, class: 'form-control' %>
+        </div>
 
-        <h4>Opinion</h4>
-        <%= f.text_area :body %>
-
-        <%= f.submit 'Create Book' %>
+        <%= f.submit 'Create Book', class: 'btn btn-primary btn-block' %>
     <% end %>
 </div>
 
