--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -5,43 +5,7 @@
   <p><%= flash[:notice] %></p>
 <% end %>
 
-<div class="col-xs-3">
-<h2>User info</h2>
-    <%= attachment_image_tag current_user, :profile_image, :fill, 100, 100, fallback: "no_image.jpg", size:'100x100' %>
-    <table class="table">
-    <tr>
-        <td>name</td>
-        <td><%= current_user.name %></td>
-    </tr>
-    <tr>
-        <td>introduction</td>
-        <td><%= current_user.introduction %></td>
-    </tr>
-    </table>
-        <%= link_to "", edit_user_path(current_user.id), class: 'btn btn-default btn-block glyphicon glyphicon-wrench' %>
-
-<h2>New book</h2>
-    <%= form_for(@book) do |f| %> 
-    <% if @book.errors.any? %>
-        <h2><%= @book.errors.count %>errors prohibited this obj from being saved:</h2>
-        <ul>
-        <% @book.errors.full_messages.each do |message| %>
-            <li><%= message %></li>
-        <% end %>
-        </ul>
-    <% end %>
-    <div class="form-group">
-        <h4>Title</h4>
-        <%= f.text_field :title, class: 'form-control' %>
-    </div>
-    <div class="form-group">
-        <h4>Opinion</h4>   
-        <%= f.text_area :body, class: 'form-control' %>
-    </div>
-
-        <%= f.submit 'Create Book', class: 'btn btn-primary btn-block' %>
-    <% end %>
-</div>
+<%= render 'users/sidebar', user: @user, book:@book %>
 
 <div class= "col-xs-9">
 <h2>Book detail</h2>
